--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "bugs": "https://github.com/nodeshift/openshift-config-loader/issues",
   "license": "Apache-2.0",
   "dependencies": {
-    "js-yaml": "~3.13.0"
+    "js-yaml": "^3.13.1"
   },
   "devDependencies": {
     "coveralls": "~3.0.2",
